<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editText_Vietnamese"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Vietnamese_Hint"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editText_English"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/English_Hint"
            android:inputType="textPersonName" />

        <LinearLayout
            style="?attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_Add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btnAddOnClick"
                android:text="@string/btn_Add_Text" />

            <Button
                android:id="@+id/btn_Clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btnClearOnClick"
                android:text="@string/btn_Clear_Text" />

            <Button
                android:id="@+id/btn_All"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btnAllOnClick"
                android:text="@string/btn_All_Text" />

        </LinearLayout>

        <TableLayout
            android:id="@+id/tableLayout_TranslationsList"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:id="@+id/tableRow_ColumnHeader"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textView_ColumnHeaderVietnamese"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/vietnameseColumnHeader"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                <TextView
                    android:id="@+id/textView_ColumnHeaderEnglish"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/englishColumnHeader"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            </TableRow>
        </TableLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>